FLUID-1821: Modified Image Reorderer instructions: place screen-reader-specific instructions in a non-visible div; remove visible instructions from the tab order. It's not an ideal solution, there are still problems, but it's better, and it addresses the issue of this JIRA.
svn path=/fluid/components/trunk/; revision=6212

--- a/src/webapp/fluid-components/css/ImageReorderer.css
+++ b/src/webapp/fluid-components/css/ImageReorderer.css
@@ -116,3 +116,11 @@ div .orderable-drop-marker{
 	border-right: 10px solid lightyellow;
 }
 
+.screen-reader-instructions {
+    position:absolute;
+    left:0px;
+    top:-500px;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
